# Agentic_RAG

./: README.md  Reflective Agentic RAG System Architecture.md  TESTING.md  agent.ipynb  marker_test.py  pyproject copy.toml  pyproject.toml  rag_system.py
.cursor/rules/: main-files.mdc
knowledge_bases/TEST/: chroma.sqlite3
src/agentic_rag/: __init__.py  cli.py  rag_system.py
tests/: test_cli.py  test_rag_system.py
